# gel

./: Cargo.toml  README.md
src/: data.rs  lib.rs  query.rs  save_svg.rs
src/queries/: filter.rs  groupby.rs  kerning.rs  loop_over.rs  mod.rs  sort.rs  transformation.rs
tests/: group_for_kern.rs
